# controllers/index.js
@@ -2,4 +2,4 @@ export { default as registerController } from './auth/registerController'
 
 export { default as loginController } from './auth/loginController'
 
-export { default as userController } from './userController'
+export { default as userController } from './auth/userController'
